# match

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.regex
.github/public/build_and_cache/: action.yml
.github/public/build_and_validate/: action.yml
.github/public/validate/: action.yml
.github/workflows/: All.yml  Test.yml
.github/workflows/match/: action.yml
.github/workflows/match2/: action.yml
.github/workflows/match_exit_code/: action.yml
.github/workflows/match_exit_code_not/: action.yml
.github/workflows/match_not/: action.yml
.github/workflows/no_failures/: action.yml
.github/workflows/reported_failures/: action.yml
.github/workflows/reported_no_failures/: action.yml
.github/workflows/test/: action.yml
.github/workflows/test_blank/: action.yml
.github/workflows/test_fail/: action.yml
.github/workflows/test_fail_fail/: action.yml
.github/workflows/test_fail_pass/: action.yml
.github/workflows/test_pass_fail/: action.yml
.github/workflows/test_pass_no_failures/: action.yml
cxx/: .clang-format  CMakeLists.txt
cxx/src/: Main.cxx  RegexHolder.hxx  RegexType.hxx  Validator.cxx  Validator.hxx
docs/: README.md
etc/: build.sh
scripts/: format_changes.sh
test/: exclusion_fail.regex  pass.regex
test/edge/: only_exclusions_pass.regex
tests/: both_fail.regex  exclusion_fail.regex  hex_fail.regex  hex_pass.regex  match_fail.regex  pass.regex
tests/edge/: last_exclusion_not_missed.regex
tests/edge_cases/: eof.regex  only_exclusions_pass.regex  only_matches_pass.regex
tests/eof/: eof_5.regex  eof_6.regex
(+3 files in other folders)
